# Trading_Bot_Skeleton

./: README.md  build_rust.py
trading_bot/: README.md  requirements.txt
trading_bot/contracts/: ArbitrageBot.sol  TradingBotVault.sol
trading_bot/rust_modules/: Cargo.toml
trading_bot/rust_modules/backtesting/: Cargo.toml
trading_bot/rust_modules/backtesting/src/: lib.rs
trading_bot/rust_modules/indicators/src/: lib.rs
trading_bot/rust_modules/orderbooks/: Cargo.toml
trading_bot/rust_modules/orderbooks/src/: lib.rs
trading_bot/rust_modules/src/: indicators.rs
trading_bot/src/core/: bot.py  config.py
trading_bot/src/data/: collector.py  processor.py
trading_bot/src/exchanges/: base.py  kraken.py
trading_bot/src/risk/: manager.py
trading_bot/src/strategies/: arbitrage.py  base.py  mean_reversion.py  momentum.py
trading_bot/src/utils/: rust_bridge.py
